--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
-body{
+body {
   background-color: #FFE6A7;
+}
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
