--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
+*{
+  color: #f0f6fc;
+}
 body {
-  background-color: #FFE6A7;
+  background-color: #30363d;
 }
 .nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: #23272e;
+}
+.Portfolio-Button {
+  text-decoration: none;
+  font-size: 1.2em;
+}
+.About-Button {
+  text-decoration: none;
+  font-size: 1.2em;
 }
