--- a/style.css
+++ b/style.css
@@ -18,3 +18,16 @@ body {
   text-decoration: none;
   font-size: 1.2em;
 }
+.Index-Button {
+  text-decoration: none;
+  font-size: 1.2em;
+}
+.BA {
+  text-align: center;
+}
+.mash {
+  width: 200px;
+}
+.car {
+  height: 550px;
+}
