--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 *{
   color: #f0f6fc;
 }
+.Name {
+  padding-left: 10px;
+}
 body {
   background-color: #30363d;
 }
@@ -9,18 +12,22 @@ body {
   align-items: center;
   justify-content: space-between;
   background-color: #23272e;
+  padding-right: 10px;
 }
 .Portfolio-Button {
   text-decoration: none;
   font-size: 1.2em;
+  transition: 1.3s;
 }
 .About-Button {
   text-decoration: none;
   font-size: 1.2em;
+  transition: 1.3s;
 }
 .Index-Button {
   text-decoration: none;
   font-size: 1.2em;
+  transition: 1.3s;
 }
 .BA {
   text-align: center;
@@ -29,5 +36,17 @@ body {
   width: 200px;
 }
 .car {
-  height: 550px;
+  height: 355.5px;
+}
+.Portfolio-Button:hover {
+  color: #97999b;
+  padding: 10px;
+}
+.About-Button:hover {
+  color: #97999b;
+  padding: 10px;
+}
+.Index-Button:hover {
+  color: #97999b;
+  padding: 10px;
 }
