--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-*{
-  color: #f0f6fc;
+* {
+  color: #f0f6fc !important;
 }
 .Name {
   padding-left: 10px;
@@ -14,6 +14,7 @@ body {
   justify-content: space-between;
   background-color: #23272e;
   padding-right: 10px;
+  z-index: 3;
 }
 .Portfolio-Button {
   text-decoration: none;
